# ipa-builder

./: Cargo.toml  DOCUMENTATION.md  README.md
src/: app.rs  autocheck.rs  config_utils.rs  ipa_logic.rs  main.rs  metrics.rs  utils.rs
